@@ -20,6 +20,7 @@ The following list contains all changes to pgAdmin3, as present in svn.
 <ul>
     <li>2005-12-02 DP  1.4.1  Drop constraints on columns before the columns themselves [Miha Radej]
     <li>2005-12-01 AP  1.4.1  Deal with incompatible wx2.6.2 API changes (comboboxes)
+    <li>2005-11-30 AP  1.4.1  Graphical explain: distinct scan images
     <li>2005-11-25 DP  1.4.1  Fix the server status SQL query
     <li>2005-11-25 FGP 1.4.1  Include pg_dump/pg_restore in the Mac OSX bundle
     <li>2005-11-20 DP  1.4.1  Use a proper 'Save As' style dialogue for selecting backup files
